tests/snapshots/snapshot_fixtures__fixtures__local_struct_name_collision.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/local_struct_name_collision.c" (c, x86_64-unknown-linux-gnu)
global __const.sum_movements.cases : rec_TestCase2E1[3] = [{1, @.str.4}, {2, @.str.5}, {3, @.str.6}] [cir_private, default, dso_local, constant]
global __const.sum_flags.cases : rec_TestCase2E0[2] = [{1, 10}, {0, 20}] [cir_private, default, dso_local, constant]
global __const.sum_docs.cases : rec_TestCase[3] = [{@.str.1, 1}, {@.str.2, 2}, {@.str.3, 3}] [cir_private, default, dso_local, constant]
global .str : s8i[10] = "%d %d %d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[2] = "a" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[3] = "bb" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[4] = "ccc" [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[2] = "x" [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[3] = "yy" [cir_private, default, align 1, dso_local, constant]
global .str.6 : s8i[4] = "zzz" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn sum_docs() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %76 = alloca s32i, "__retval", align 4
    %77 = alloca rec_TestCase[3], "cases", align 16
    %78 = alloca s32i, "total", align 4
    %79 = get_global @__const.sum_docs.cases : rec_TestCase[3]*
    copy %77, %79
    %80 = const 0 : s32i
    store %80, %78, align 4
    scope {
        %83 = alloca s32i, "i", align 4
        %84 = const 0 : s32i
        store %84, %83, align 4
        for cond: {
            %104 = load %83 : s32i, align 4
            %105 = const 3 : s32i
            %106 = cmp lt %104, %105 : bool
            condition %106
        } step: {
            %85 = load %83 : s32i, align 4
            %86 = inc %85 : s32i [nsw]
            store %86, %83, align 4
            yield
        } do {
            scope {
                %87 = const 0 : s64i
                %88 = load %83 : s32i, align 4
                %89 = cast(integral) %88 : s64i
                %90 = get_element %77[%89] : rec_TestCase*
                %91 = get_member %90[0] "doc" : s8i**
                %92 = load %91 : s8i*, align 16
                %93 = ptr_stride %92, %87 : s8i*
                %94 = load %93 : s8i, align 1
                %95 = cast(integral) %94 : s32i
                %96 = load %83 : s32i, align 4
                %97 = cast(integral) %96 : s64i
                %98 = get_element %77[%97] : rec_TestCase*
                %99 = get_member %98[1] "expectedStatus" : s32i*
                %100 = load %99 : s32i, align 8
                %101 = mul %95, %100 : s32i [nsw]
                %102 = load %78 : s32i, align 4
                %103 = add %102, %101 : s32i [nsw]
                store %103, %78, align 4
                yield
            }
            yield
        }
        yield
    }
    %81 = load %78 : s32i, align 4
    store %81, %76
    %82 = load %76 : s32i
    return %82
}
fn sum_flags() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %42 = alloca s32i, "__retval", align 4
    %43 = alloca rec_TestCase2E0[2], "cases", align 16
    %44 = alloca s32i, "total", align 4
    %45 = get_global @__const.sum_flags.cases : rec_TestCase2E0[2]*
    copy %43, %45
    %46 = const 0 : s32i
    store %46, %44, align 4
    scope {
        %49 = alloca s32i, "i", align 4
        %50 = const 0 : s32i
        store %50, %49, align 4
        for cond: {
            %73 = load %49 : s32i, align 4
            %74 = const 2 : s32i
            %75 = cmp lt %73, %74 : bool
            condition %75
        } step: {
            %51 = load %49 : s32i, align 4
            %52 = inc %51 : s32i [nsw]
            store %52, %49, align 4
            yield
        } do {
            scope {
                scope {
                    %53 = load %49 : s32i, align 4
                    %54 = cast(integral) %53 : s64i
                    %55 = get_element %43[%54] : rec_TestCase2E0*
                    %56 = get_member %55[0] "usesParameterEntities" : s32i*
                    %57 = load %56 : s32i, align 8
                    %58 = cast(int_to_bool) %57 : bool
                    if %58 {
                        %66 = load %49 : s32i, align 4
                        %67 = cast(integral) %66 : s64i
                        %68 = get_element %43[%67] : rec_TestCase2E0*
                        %69 = get_member %68[1] "weight" : s32i*
                        %70 = load %69 : s32i, align 4
                        %71 = load %44 : s32i, align 4
                        %72 = add %71, %70 : s32i [nsw]
                        store %72, %44, align 4
                        yield
                    } else {
                        %59 = load %49 : s32i, align 4
                        %60 = cast(integral) %59 : s64i
                        %61 = get_element %43[%60] : rec_TestCase2E0*
                        %62 = get_member %61[1] "weight" : s32i*
                        %63 = load %62 : s32i, align 4
                        %64 = load %44 : s32i, align 4
                        %65 = sub %64, %63 : s32i [nsw]
                        store %65, %44, align 4
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %47 = load %44 : s32i, align 4
    store %47, %42
    %48 = load %42 : s32i
    return %48
}
fn sum_movements() -> s32i [internal, c, no_inline, dso_local, nothrow] {
    %11 = alloca s32i, "__retval", align 4
    %12 = alloca rec_TestCase2E1[3], "cases", align 16
    %13 = alloca s32i, "total", align 4
    %14 = get_global @__const.sum_movements.cases : rec_TestCase2E1[3]*
    copy %12, %14
    %15 = const 0 : s32i
    store %15, %13, align 4
    scope {
        %18 = alloca s32i, "i", align 4
        %19 = const 0 : s32i
        store %19, %18, align 4
        for cond: {
            %39 = load %18 : s32i, align 4
            %40 = const 3 : s32i
            %41 = cmp lt %39, %40 : bool
            condition %41
        } step: {
            %20 = load %18 : s32i, align 4
            %21 = inc %20 : s32i [nsw]
            store %21, %18, align 4
            yield
        } do {
            scope {
                %22 = load %18 : s32i, align 4
                %23 = cast(integral) %22 : s64i
                %24 = get_element %12[%23] : rec_TestCase2E1*
                %25 = get_member %24[0] "expectedMovementInChars" : s32i*
                %26 = load %25 : s32i, align 16
                %27 = const 0 : s64i
                %28 = load %18 : s32i, align 4
                %29 = cast(integral) %28 : s64i
                %30 = get_element %12[%29] : rec_TestCase2E1*
                %31 = get_member %30[1] "input" : s8i**
                %32 = load %31 : s8i*, align 8
                %33 = ptr_stride %32, %27 : s8i*
                %34 = load %33 : s8i, align 1
                %35 = cast(integral) %34 : s32i
                %36 = add %26, %35 : s32i [nsw]
                %37 = load %13 : s32i, align 4
                %38 = add %37, %36 : s32i [nsw]
                store %38, %13, align 4
                yield
            }
            yield
        }
        yield
    }
    %16 = load %13 : s32i, align 4
    store %16, %11
    %17 = load %11 : s32i
    return %17
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @printf : ((s8i*, ...) -> s32i)*
    %3 = get_global @.str : s8i[10]*
    %4 = cast(array_to_ptrdecay) %3 : s8i*
    %5 = call @sum_docs() : s32i [all]
    %6 = call @sum_flags() : s32i [all]
    %7 = call @sum_movements() : s32i [all]
    %8 = call @printf(%4, %5, %6, %7) : s32i [all]
    %9 = const 0 : s32i
    store %9, %0
    %10 = load %0 : s32i
    return %10
}
