tests/snapshots/snapshot_fixtures__fixtures__local_vla.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/local_vla.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn sum_vla(%arg0: s32i, %arg1: s32i*) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s32i*):
        %35 = alloca s32i, "length", align 4
        %36 = alloca s32i*, "values", align 8
        %37 = alloca s32i, "__retval", align 4
        %38 = alloca s32i, "total", align 4
        store %arg0, %35
        store %arg1, %36
        %39 = const 0 : s32i
        store %39, %38, align 4
        scope {
            %42 = alloca s32i, "index", align 4
            %43 = const 0 : s32i
            store %43, %42, align 4
            for cond: {
                %53 = load %42 : s32i, align 4
                %54 = load %35 : s32i, align 4
                %55 = cmp lt %53, %54 : bool
                condition %55
            } step: {
                %44 = load %42 : s32i, align 4
                %45 = inc %44 : s32i [nsw]
                store %45, %42, align 4
                yield
            } do {
                scope {
                    %46 = load %42 : s32i, align 4
                    %47 = cast(integral) %46 : s64i
                    %48 = load %36 : s32i*, align 8
                    %49 = ptr_stride %48, %47 : s32i*
                    %50 = load %49 : s32i, align 4
                    %51 = load %38 : s32i, align 4
                    %52 = add %51, %50 : s32i [nsw]
                    store %52, %38, align 4
                    yield
                }
                yield
            }
            yield
        }
        %40 = load %38 : s32i, align 4
        store %40, %37
        %41 = load %37 : s32i
        return %41
}
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "result", align 4
    %2 = const 0 : s32i
    store %2, %0
    scope {
        %12 = alloca s32i, "length", align 4
        %13 = alloca u8i*, "saved_stack", align 8
        %14 = const 4 : s32i
        store %14, %12, align 4
        %15 = load %12 : s32i, align 4
        %16 = cast(integral) %15 : u64i
        %17 = stacksave : u8i*
        store %17, %13, align 8
        cleanup.scope {
            %19 = alloca s32i, "values", align 16, dynamic %16
            scope {
                %22 = alloca s32i, "index", align 4
                %23 = const 0 : s32i
                store %23, %22, align 4
                for cond: {
                    %32 = load %22 : s32i, align 4
                    %33 = load %12 : s32i, align 4
                    %34 = cmp lt %32, %33 : bool
                    condition %34
                } step: {
                    %24 = load %22 : s32i, align 4
                    %25 = inc %24 : s32i [nsw]
                    store %25, %22, align 4
                    yield
                } do {
                    scope {
                        %26 = load %22 : s32i, align 4
                        %27 = const 3 : s32i
                        %28 = add %26, %27 : s32i [nsw]
                        %29 = load %22 : s32i, align 4
                        %30 = cast(integral) %29 : s64i
                        %31 = ptr_stride %19, %30 : s32i*
                        store %28, %31, align 4
                        yield
                    }
                    yield
                }
                yield
            }
            %20 = load %12 : s32i, align 4
            %21 = call @sum_vla(%20, %19) : s32i [all]
            store %21, %1, align 4
            yield
        } cleanup normal {
            %18 = load %13 : u8i*, align 8
            stackrestore %18
            yield
        }
        yield
    }
    %3 = get_global @printf : ((s8i*, ...) -> s32i)*
    %4 = get_global @.str : s8i[4]*
    %5 = cast(array_to_ptrdecay) %4 : s8i*
    %6 = load %1 : s32i, align 4
    %7 = const 1 : s32i
    %8 = add %6, %7 : s32i [nsw]
    %9 = call @printf(%5, %8) : s32i [all]
    %10 = const 0 : s32i
    store %10, %0
    %11 = load %0 : s32i
    return %11
}
